versioned_docs/version-23.2/reference/rpk/rpk-redpanda/rpk-redpanda-tune.mdx
---
title: rpk redpanda tune
rpk_version: (rev )
---

<head>
  <meta name="title" content="rpk redpanda tune (autotuner) | Redpanda Docs" />
  <meta name="description" content="rpk redpanda tune (autotuner)" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-tune/" />
</head>

`rpk redpanda tune`, also referred to as the autotuner, identifies the hardware configuration on your machine and optimizes the Linux kernel to give you the best performance for running Redpanda.

Available tuners:

- all
- cpu
- aio_events
- coredump
- ballast_file
- disk_scheduler
- disk_nomerges
- net
- clocksource
- swappiness
- transparent_hugepages
- disk_irq
- disk_write_cache
- fstrim

To learn more about a tuner, run `rpk redpanda tune help |tuner name|`.

:::important
You should run the autotuner as part of the production deployment workflow. Redpanda recommends you first follow a guide for production deployment:
- [Deploy for Production](../../../../deploy/deployment-option/self-hosted/manual/production/production-deployment) 
- [Tune Kubernetes Worker Nodes for Production](../../../../deploy/deployment-option/self-hosted/kubernetes/kubernetes-tune-workers)

While you follow the guides, consult this reference for details about the autotuner.
:::

## Usage

```bash
rpk redpanda tune <list of elements to tune> [command] [flags]
```

:::tip tips
- When running `rpk redpanda tune`, make sure that your current Linux user has root privileges. The autotuner requires privileged access to the Linux kernel settings.

- To run `rpk redpanda tune all` on a Redpanda broker automatically after broker or host restarts, configure the service `redpanda-tuner`, which runs `rpk redpanda tune all`, to run at boot-up:

  - For RHEL, after installing the rpm package, run `systemctl` to both start and enable the `redpanda-tuner` service:

    ```bash
    sudo systemctl start redpanda-tuner
    sudo systemctl enable redpanda-tuner
    ```

  - For Ubuntu, after installing the apt package, run `systemctl` to start the `redpanda-tuner` service (which is already enabled):

    ```bash
    sudo systemctl start redpanda-tuner
    ```

:::

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>--cpu-set</td>
      <td>string</td>
      <td>
        Set of CPUs for tuners to use in cpuset(7) format; if not specified,
        tuners will use all available CPUs (default "all").
      </td>
    </tr>
    <tr>
      <td>-r, --dirs</td>
      <td>strings</td>
      <td>
        List of *data* directories or places to store data (e.g.
        /var/vectorized/redpanda/); usually your XFS filesystem on an NVMe SSD
        device.
      </td>
    </tr>
    <tr>
      <td>-d, --disks</td>
      <td>strings</td>
      <td>Lists of devices to tune f.e. 'sda1'.</td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for tune.</td>
    </tr>
    <tr>
      <td>-m, --mode</td>
      <td>string</td>
      <td>Operation Mode: one of: [sq, sq_split, mq].</td>
    </tr>
    <tr>
      <td>-n, --nic</td>
      <td>strings</td>
      <td>Network Interface Controllers to tune.</td>
    </tr>
    <tr>
      <td>--output-script</td>
      <td>string</td>
      <td>Generate a tuning file that can later be used to tune the system.</td>
    </tr>
    <tr>
      <td>--reboot-allowed</td>
      <td>-</td>
      <td>Allow tuners to tune boot parameters and request system reboot.</td>
    </tr>
    <tr>
      <td>--timeout</td>
      <td>duration</td>
      <td>
        The maximum time to wait for the tune processes to complete (e.g. 300ms,
        1.5s, 2h45m) (default 10s).
      </td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda or rpk config file; default search paths are
        ~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.
      </td>
    </tr>
    <tr>
      <td>-X, --config-opt</td>
      <td>stringArray</td>
      <td>
        Override rpk configuration settings; '-X help' for detail or '-X list'
        for terser detail.
      </td>
    </tr>
    <tr>
      <td>--profile</td>
      <td>string</td>
      <td>rpk profile to use.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>Enable verbose logging.</td>
    </tr>
  </tbody>
</table>

### Examples

This section provides examples of using the autotuner.

- To enable a predetermined set of tuners for production, run the [rpk redpanda mode prod](../../../../reference/rpk/rpk-redpanda/rpk-redpanda-mode) command. This command modifies settings in the `redpanda.yaml` configuration file. 

    <details>
        <summary>Enabled features in production mode</summary>
    Enabling production (`prod`) mode sets the following features, including a subset of tuners:

    ```yaml
    redpanda:
        developer_mode: false
    rpk:
        tune_network: true
        tune_disk_scheduler: true
        tune_disk_nomerges: true
        tune_disk_write_cache: true
        tune_disk_irq: true
        tune_cpu: true
        tune_aio_events: true
        tune_clocksource: true
        tune_swappiness: true
        tune_ballast_file: true
        overprovisioned: false
    ``` 
    </details>

- To list the available tuners and to see whether they're enabled or supported (and a reason for if they're unsupported), run the [rpk redpanda tune list](../../../../reference/rpk/rpk-redpanda/rpk-redpanda-tune-list) command.

- To enable or disable a tuner, run the [rpk redpanda config set](../../../../reference/rpk/rpk-redpanda/rpk-redpanda-config-set), as the tuner flags are configurable node properties.
    
    - Each tuner has a YAML key flag for enabling/disabling itself in `redpanda.yaml`. Most are formed by prepending `rpk.tune_` to the name of the tuner listed by [rpk redpanda tune list](../../../../reference/rpk/rpk-redpanda/rpk-redpanda-tune-list). See the [Tuners reference](../rpk-redpanda-tune-list#tuners) for the exact key for a tuner. For an example of enabling a tuner, the key for the `aio_events` tuner is `rpk.tune_aio_events`, and it can be enabled with the following command:

        ```
        rpk redpanda config set rpk.tune_aio_events true
        ```

- To run all available tuners, use the [rpk redpanda tune](../../../../reference/rpk/rpk-redpanda/rpk-redpanda-tune) command for `all`:

    ```
    rpk redpanda tune all
    ```

- To run a specific tuner, use the [rpk redpanda tune](../../../../reference/rpk/rpk-redpanda/rpk-redpanda-tune) command for the tuner:

    ```
    rpk redpanda tune <tuner>
    ```

- To learn more about a tuner, use the [rpk redpanda tune help](../../../../reference/rpk/rpk-redpanda/rpk-redpanda-tune) command for the tuner:

    ```
    rpk redpanda tune help <tuner>
    ```

  See also the [Tuners reference](../rpk-redpanda-tune-list#tuners) for descriptions about each tuner.


---

### Related topics
- [Deploy for Production](../../../../deploy/deployment-option/self-hosted/manual/production/production-deployment) 
- [Tune Kubernetes Worker Nodes for Production](../../../../deploy/deployment-option/self-hosted/kubernetes/kubernetes-tune-workers)
- [rpk redpanda mode production](../../../../reference/rpk/rpk-redpanda/rpk-redpanda-mode)
- [rpk redpanda tune list](../../../../reference/rpk/rpk-redpanda/rpk-redpanda-tune-list)
